# KREATOR-BY-JVP

./: .gitignore  Kreator.md  Kreator_Produto (3).md  Kreator_Runtime (3).md  README.md  project-pipeline (1).skill  pyproject.toml  requirements-models.txt  requirements-vlm.txt  requirements-web.txt  requirements.txt
.claude/skills/project-pipeline/: SKILL.md
.devcontainer/: devcontainer.json
assets/: README.md  manifest.example.json
data/: README.md  example.truth.json
docs/: codespaces-guide.md  not-generative.md  training-vs-dsl.md  training.md  vlm-without-gpu.md
scripts/: analyze_cache.py  calibrate.py  eval_e1.py  make_shorts.py  make_truth.py  run_e1.py  run_edit.py  run_job.py  train_taste.py
src/kreator/: __init__.py  cache.py  ffmpeg.py  provenance.py  types.py
src/kreator/director/: __init__.py  auto.py  content.py  instructions.py  job.py  templates.py
src/kreator/dsl/: __init__.py  captions.py  compose.py  execute.py  program.py  timeline.py
src/kreator/editor/: __init__.py  condenser.py  interest.py  render.py  silence.py
src/kreator/evidence/: __init__.py  analyst.py  types.py  (+1 more)
tests/: test_cache.py  test_captions.py  test_director.py  test_dsl.py  test_editor.py  test_families.py  test_gamesense.py  test_instructions.py  test_job.py  test_keyframes.py  test_learn.py  test_library.py  test_montage.py  test_motion.py  test_narrative_polish.py  test_normalization.py  test_planner.py  test_reframe.py  test_sfx_broll.py  test_shorts.py  test_signal_layer.py  test_silence.py  test_speech.py  test_story.py  test_templates.py  test_thumbnail.py  test_validator.py  test_vision.py  test_vlm_classify.py
web/: app.py
(+59 files in other folders)
