[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kreator"
version = "0.0.1"
description = "The Operating System for Human Creativity — E1 validation slice"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scenedetect>=0.6.3",
    "librosa>=0.10",
    "soundfile>=0.12",
]

[project.optional-dependencies]
models = ["torch>=2.1", "transformers>=4.49", "accelerate>=0.30", "whisperx>=3.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
