[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kreator"
version = "0.0.1"
description = "The Operating System for Human Creativity — E1 validation slice"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "scenedetect>=0.6.3",
    "librosa>=0.10",
    "soundfile>=0.12",
    "faster-whisper>=1.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
# Local, offline VLM for K Editor --vlm (CPU). Install torch/torchvision from
# the CPU index to avoid CUDA wheels.
vlm = ["torch>=2.1", "torchvision>=0.16", "transformers>=4.49", "num2words>=0.5", "pillow>=10.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
